@@ -1,3 +1,9 @@
 [submodule "libias"]
 	path = libias
 	url = ../libias
+[submodule "vendor/curl"]
+	path = vendor/curl
+	url = https://github.com/curl/curl
+[submodule "vendor/nghttp2"]
+	path = vendor/nghttp2
+	url = https://github.com/nghttp2/nghttp2
