@@ -1,0 +1,66 @@
+#define BUILDING_LIBCURL
+#define CURL_DISABLE_DICT
+#define CURL_DISABLE_GOPHER
+#define CURL_DISABLE_IMAP
+#define CURL_DISABLE_LDAP
+#define CURL_DISABLE_LDAPS
+#define CURL_DISABLE_POP3
+#define CURL_DISABLE_RTSP
+#define CURL_DISABLE_SMB
+#define CURL_DISABLE_SMTP
+#define CURL_DISABLE_TELNET
+#define CURL_DISABLE_TFTP
+#define CURL_STATICLIB
+#define ENABLE_IPV6
+#define HAVE_ASSERT_H
+#define OS "unknown"
+#define HAVE_ZLIB_H
+#define HAVE_LONGLONG
+#define HAVE_LIBZ
+#define HAVE_BOOL_T
+#define HAVE_STDBOOL_H
+#define HAVE_GETADDRINFO
+#define HAVE_GETPEERNAME
+#define HAVE_GETSOCKNAME
+#define CURL_DISABLE_NTLM
+#define USE_NGHTTP2
+#define NGHTTP2_STATICLIB
+#define USE_OPENSSL
+
+#define HAVE_PTHREAD_H
+#define HAVE_ARPA_INET_H
+#define HAVE_ERRNO_H
+#define HAVE_FCNTL_H
+#define HAVE_NETDB_H
+#define HAVE_NETINET_IN_H
+#define HAVE_NETINET_TCP_H
+#define HAVE_POLL_H
+#define HAVE_FCNTL_O_NONBLOCK
+#define HAVE_SYS_SELECT_H
+#define HAVE_SYS_STAT_H
+#define HAVE_UNISTD_H
+#define HAVE_RECV
+#define HAVE_SELECT
+#define HAVE_SEND
+#define HAVE_SOCKET
+#define HAVE_STERRROR_R
+#define HAVE_SOCKETPAIR
+#define HAVE_STRUCT_TIMEVAL
+#define HAVE_SYS_UN_H
+#define USE_THREADS_POSIX
+#define USE_UNIX_SOCKETS
+
+#define RECV_TYPE_ARG1 int
+#define RECV_TYPE_ARG2 void*
+#define RECV_TYPE_ARG3 size_t
+#define RECV_TYPE_ARG4 int
+#define RECV_TYPE_RETV ssize_t
+#define SEND_QUAL_ARG2 const
+#define SEND_TYPE_ARG1 int
+#define SEND_TYPE_ARG2 void*
+#define SEND_TYPE_ARG3 size_t
+#define SEND_TYPE_ARG4 int
+#define SEND_TYPE_RETV ssize_t
+#define SIZEOF_CURL_OFF_T 8
+#define SIZEOF_INT 4
+#define SIZEOF_SHORT 2
